# site-to-feed

./: .gitignore  Procfile  README.md  fly.toml  pyproject.toml
site_to_feed/: app.py
site_to_feed/static/styles/: style.css
site_to_feed/templates/: documentation.html  extract_html.html  feed.html  format_feed_output.html  get_html.html  im_feeling_lucky.html  im_feeling_lucky_htmx.html  index.html  layout.html  step_1_get_html_source.html  step_2.html  step_2_define_extraction_rules.html  step_2_define_extraction_rules_htmx.html  step_2_extract_html_htmx.html  step_3.html  step_3_define_output_format.html  step_3_define_output_format_htmx.html  step_4_get_rss_feed.html  step_4_get_rss_feed_htmx.html
site_to_feed/templates/partials/: delete_feed.html  edit_feed.html  extract_html_rules_form.html  extracted_html.html  feed.html  feed_links.html  feed_preview.html  format_feed_output_form.html  get_feed.html  get_html_source_form.html  html_source_code.html  preview_feed.html
